--- a/src/components/mortgages/FRM.css
+++ b/src/components/mortgages/FRM.css
@@ -21,11 +21,11 @@ html, body {
 /* Style the image */
 .frm-image {
   width: 100%;
-  height: 100%;
+  height: 100vh; /* Set the height to half of the viewport height */
   object-fit: cover; /* Ensure the image covers the container without distortion */
-  object-position: center; /* Center the image within its container */
+  object-position: center bottom; /* Position the image to show the top half */
+  margin-bottom: 20px;
 }
-
 /* Style the content */
 .frm-content {
   max-width: 800px; /* Set a maximum width for the content */
@@ -81,12 +81,21 @@ html, body {
 /* Add these styles to your existing CSS file */
 
 /* Style the text overlay */
+
 .overlay-text-frm{
+  position: absolute; /* Position the text absolutely */
+  top: 200px; /* Adjust top position */
+  right: 500px; /* Adjust right position */
+  color: white; /* Text color */
+  font-size: 36px; /* Font size */
+  font-weight: bold; /* Font weight */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Text shadow for better visibility */
+}
+.fmoverlay {
   position: absolute;
-  top: 430px; /* Adjust this value to move the text vertically */
-  right: 30px; /* Adjust this value to move the text horizontally */
-  color: white;
-  font-size: 18px;
-  font-weight: bold;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0.5, 0.5); 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 65%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 }
