--- a/src/components/mortgages/VA.css
+++ b/src/components/mortgages/VA.css
@@ -1,4 +1,5 @@
-body {
+/* Set margin and padding to 0 for the whole page */
+html, body {
   background-color: white; /* Set background color of the body to white */
   margin: 0;
   font-family: 'Poppins', sans-serif; /* Set 'Poppins' font family for the body */
@@ -15,7 +16,7 @@ body {
   margin-bottom: 20px; /* Add some space below the image */
 }
 
-.va-image, .fha-image {
+.va-image {
   width: 100%;
   height: 100%;
   object-fit: cover; /* Ensure the image covers the container without distortion */
@@ -70,11 +71,19 @@ button.apply-button:hover {
   background-color: #0056b3; /* Darker blue color on hover */
 }
 .overlay-text-va{
+  position: absolute; /* Position the text absolutely */
+  top: 200px; /* Adjust top position */
+  right: 600px; /* Adjust right position */
+  color: white; /* Text color */
+  font-size: 36px; /* Font size */
+  font-weight: bold; /* Font weight */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Text shadow for better visibility */
+}
+.overlayv{
   position: absolute;
-  top: 430px; /* Adjust this value to move the text vertically */
-  right: 30px; /* Adjust this value to move the text horizontally */
-  color:black;
-  font-size: 18px;
-  font-weight: bold;
-  text-shadow: 2px 2px 4px white(0, 0, 0.5, 0.5); 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height:65%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 }
