--- a/src/components/mortgages/Arm.css
+++ b/src/components/mortgages/Arm.css
@@ -1,10 +1,10 @@
 /* Set margin and padding to 0 for the whole page */
-html, body {
+/* html, body {
   margin: 0;
   padding: 0;
   height: 100%;
   font-family: 'Poppins', sans-serif;
-}
+} */
 
 .arm-image-container{
   width: 100%;
