--- a/src/components/tools/QuickQuoteForm.css
+++ b/src/components/tools/QuickQuoteForm.css
@@ -1,6 +1,4 @@
-body{
-  background-color: #1c334c;
-}
+
 .quick-quote-form {
   width: 100%;
   max-width: 600px;
@@ -44,7 +42,7 @@ body{
   margin-right: 5px;
 }
 
-button {
+.qqButton {
   display: block;
   width: 100%;
   padding: 10px;
@@ -57,6 +55,6 @@ button {
   transition: background-color 0.3s;
 }
 
-button:hover {
+.qqButton:hover {
   background-color: #0056b3;
 }
