--- a/src/components/common/header/header.css
+++ b/src/components/common/header/header.css
@@ -13,7 +13,7 @@
 }
 
 .header-scroll {
-  background-color: rgba(243, 243, 243, 0.923);
+  background-color: rgba(255, 255, 255);
   height: 12vh;
   box-shadow: 0 5px 30px rgb(0 22 84 / 10%);
   padding: 15px 0;
