--- a/src/components/tools/QuickQuoteForm.css
+++ b/src/components/tools/QuickQuoteForm.css
@@ -58,3 +58,28 @@
 .qqButton:hover {
   background-color: #0056b3;
 }
+
+.quick-quote-image{
+  width: 100%;
+  height: 550px;
+  object-fit: cover; /* Ensure the image covers the container without distortion */
+  object-position: center top; /* Center the image within its container */
+
+}
+.overlayquick-quote{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:550px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  }
+  .overlay-text-quick-quote{
+    position: absolute; /* Position the text absolutely */
+    top: 300px; /* Adjust top position */
+    left:180px; /* Adjust right position */
+    color: white; /* Text color */
+    font-size: 36px; /* Font size */
+    font-weight: bold; /* Font weight */
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Text shadow for better visibility */
+  }
