--- a/src/components/tools/Refinance.css
+++ b/src/components/tools/Refinance.css
@@ -101,3 +101,30 @@
 .refinance-button:hover {
     background-color: #0056b3;
 }
+
+.refinance-image{
+    width: 100%;
+    height: 580px; /* Set the height to half of the viewport height */
+    object-fit: cover; /* Ensure the image covers the container without distortion */
+    object-position: center ; /* Position the image to show the top half */
+    margin-bottom: 20px;
+  }
+  .overlay-text-refinance{
+    position: absolute;
+    top: 50%; /* Adjust top position */
+    left: 50%; /* Adjust left position */
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 36px;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  }
+  
+  .overlayrefinance{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height:580px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  }
