--- a/src/components/home/featured/Featured.css
+++ b/src/components/home/featured/Featured.css
@@ -1,55 +1,68 @@
-.featured .box {
-  box-shadow: 0 0 20px 0 rgb(112 121 138 / 18%);
-  border-radius: 6px;
+.featured {
+  padding: 50px 0;
+  background-color: #f9f9f9;
+}
+
+.featured .heading {
   text-align: center;
-  padding: 30px;
-  
-  min-width: 300px;
-  min-height: auto;
+  margin-bottom: 20px;
 }
 
-.featured img {
-  width: 75px;
-  height:75px;
-  margin: auto;
+.featured .heading .welcome {
+  font-size: 24px;
+  color: #333;
 }
 
-.benefits {
+.featured .heading .subtitle {
+  font-size: 18px;
+  color: #666;
+}
+
+.featuredcontainer {
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
+}
+
+.featuredcard {
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  width: 45%;
+  text-align: left;
+}
+
+.featuredcard h3 {
+  font-size: 20px;
+  color: #333;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.featuredcard p {
+  font-size: 16px;
+  color: #666;
+}
+
+.featuredapply-now {
+  display: inline-block;
   margin-top: 20px;
+  font-size: 16px;
+  color: #007bff;
+  text-decoration: none;
+  float: right;  /* This aligns the button to the right */
 }
 
-.benefits-item {
-  padding-top: 0.5rem;
-  display: flex;
-  align-items: center;
+.featuredapply-now:hover {
+  text-decoration: underline;
 }
 
-.benefits-icon {
-  color: green;
-  margin-right: 5px;
-}
-
-
-/* .buttons {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
-}
-
-.buttons button {
-  flex: 1;
-  padding: 10px;
-  margin: 0 5px;
-} */
-
-/* Add media query for responsiveness */
-@media (max-width: 1068px) {
-  .content.grid3 {
-    min-width: 300px;
-    display: block;
-  }
-
-  .benefits-list {
-    align-items: flex-start;
-  }
+.featured-icon {
+  width: 40px;  /* Adjust the size as needed */
+  height: 40px;  /* Adjust the size as needed */
+  display: block;
+  margin-bottom: 15px;  /* Space between icon and heading */
+  margin-left: auto;
+  margin-right: auto;
 }
