--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -13,11 +13,9 @@
   line-height: 30px;
 }
 .about .welcome-container {
-  
-  background-color: white; /* Set background color to white */
-  padding: 20px; /* Add padding for spacing */
-  /* border-radius: 10px; */
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Add shadow for depth */
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 @media screen and (max-width: 768px) {
   .about .container {
@@ -32,10 +30,7 @@
   .about .welcome-container h2 {
     text-align: center;
   }
-  
   .about .welcome-container .content-container {
     text-align: center;
   }
-  
-
 }
