--- a/src/components/common/footer/footer.css
+++ b/src/components/common/footer/footer.css
@@ -127,3 +127,33 @@
   from { opacity: 0; }
   to { opacity: 1; }
 }
+
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-nmsimage,
+.footer-ehoimage {
+  flex: 1;
+}
+
+.footer-nms {
+  width: 100px; /* Adjust the width as needed */
+  height: auto; /* Maintain aspect ratio */
+  margin-top: 5px; /* Adjust vertical margin as needed */
+}
+
+.footer-eho {
+  width: 100px; /* Adjust the width as needed */
+  height: auto; /* Maintain aspect ratio */
+  margin-top: 5px; /* Adjust vertical margin as needed */
+}
+.footer-nmsimage{
+  margin-left:450px;
+}
+.footer-ehoimage{
+  margin-right:280px;
+}
