--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -34,3 +34,11 @@
     text-align: center;
   }
 }
+.aboutoverlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height:51%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+}
