--- a/src/components/reviewCard/ReviewCarousel.css
+++ b/src/components/reviewCard/ReviewCarousel.css
@@ -13,7 +13,7 @@
   overflow: hidden;
   position: relative;
   border-radius: 15px;
-  background-color: #fff;
+  /* background-color: #fff; */
 }
 
 .carousel-inner {
@@ -34,8 +34,8 @@
 }
 
 .review-card {
-  height: 350px;
-  background: #fff;
+  height: 300px;
+  /* background: #fff; */
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
