--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -39,6 +39,17 @@
   top: 0;
   left: 0;
   width: 100%;
-  height:51%;
+  height:56.5%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 }
+.overlay-text-about{
+  position: absolute;
+  top: 250px; /* Adjust top position */
+  left: 50%; /* Adjust left position */
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 36px;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
