--- a/src/components/common/Back.css
+++ b/src/components/common/Back.css
@@ -1,12 +1,13 @@
 /* Back.css */
 .back {
     background-size: cover;
-    height: 100%;
+    height: 400px;
     background-position: center;
     background-repeat: no-repeat;
     padding: 50px 0;
     text-align: center;
     color: white;
+    
   }
   .back-content {
     
