--- a/src/components/tools/Refinance.css
+++ b/src/components/tools/Refinance.css
@@ -1,195 +1,208 @@
 .refinance-container {
-    max-width: 800px;
-    margin: 50px auto;
-    padding: 20px;
-    background-color: #ffffff;
-    color: #333333;
-    border-radius: 10px;
-    font-family: Arial, sans-serif;
-  }
-  
-  .refinance-container h1 {
-    font-size: 2em;
-    margin-bottom: 20px;
-  }
-  
-  .refinance-container p {
-    font-size: 1.2em;
-    line-height: 1.6;
-    margin-bottom: 20px;
-    margin-left: 20px; /* Align paragraphs */
-  }
-  
-  .refinance-container h2 {
-    font-size: 1.5em;
-    margin-top: 20px;
-    margin-left: 20px; /* Align headings */
-  }
-  
-  .refinance-container ul {
-    list-style-type: disc;
-    margin-left: 40px; /* Ensure list items align with paragraphs */
-    margin-bottom: 20px;
-  }
-  
-  .refinance-container ul li {
-    font-size: 1.2em;
-    margin-bottom: 10px;
-  }
-  
-  .refinance-buttons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .refinance-button {
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 1.2em;
-    color: #ffffff;
-    background-color: #007bff;
-    border: none;
-    border-radius: 5px;
-    text-decoration: none;
-    margin: 10px 0;
-    transition: background-color 0.3s;
-  }
-  
-  .refinance-button:hover {
-    background-color: #0056b3;
-  }
-  
-  .content {
-    display: flex;
-    align-items: center;
-    margin: 20px 0;
-  }
-  
-  .content img {
-    width: 150px; /* Adjust the image size to fit the new width */
-    height: auto;
-    margin: 0 20px;
-  }
-  
-  .content:nth-child(even) {
-    flex-direction: row-reverse;
-  }
-  
-  .text {
-    flex: 1;
-    margin-left: 20px; /* Align text within content */
-  }
-  
-  .refinance-buttons {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-  }
-  
-  .refinance-button {
-    background-color: #007bff;
-    color: white;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-  }
-  
-  .refinance-button:hover {
-    background-color: #0056b3;
-  }
-  
-  .refinance-image {
-    width: 100%;
-    height: 580px;
-    object-fit: cover;
-    object-position: center;
-    margin-bottom: 20px;
-    position: relative; /* Add position relative to the parent container */
-  }
-  
-  .overlay-text-refinance {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 36px;
-    font-weight: bold;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    text-align: center;
-  }
-  
-  .overlayrefinance {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 580px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-    z-index: 1; /* Ensure the overlay is above the image */
-  }
-  
-  /* Media Queries for Mobile View */
-  @media (max-width: 768px) {
-    .refinance-container {
+  max-width: 800px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #ffffff;
+  color: #333333;
+  border-radius: 10px;
+  font-family: Arial, sans-serif;
+}
+
+.refinance-container h1 {
+  font-size: 2em;
+  margin-bottom: 20px;
+  text-align: justify; /* Justify text */
+}
+
+.refinance-container p {
+  font-size: 1.2em;
+  line-height: 1.6;
+  margin-bottom: 20px;
+  margin-left: 20px; /* Align paragraphs */
+  text-align: justify; /* Justify text */
+}
+
+.refinance-container h2 {
+  font-size: 1.5em;
+  margin-top: 20px;
+  margin-left: 20px; /* Align headings */
+  text-align: justify; /* Justify text */
+}
+
+.refinance-container ul {
+  list-style-type: disc;
+  margin-left: 40px; /* Ensure list items align with paragraphs */
+  margin-bottom: 20px;
+  text-align: justify; /* Justify text */
+}
+
+.refinance-container ul li {
+  font-size: 1.2em;
+  margin-bottom: 10px;
+  text-align: justify; /* Justify text */
+}
+
+.refinance-buttons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.refinance-button {
+  display: inline-block;
+  padding: 10px 20px;
+  font-size: 1.2em;
+  color: #ffffff;
+  background-color: #007bff;
+  border: none;
+  border-radius: 5px;
+  text-decoration: none;
+  margin: 10px 0;
+  transition: background-color 0.3s;
+}
+
+.refinance-button:hover {
+  background-color: #0056b3;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.content img {
+  width: 150px; /* Adjust the image size to fit the new width */
+  height: auto;
+  margin: 0 20px;
+}
+
+.content:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
+.text {
+  flex: 1;
+  margin-left: 0px; /* Align text within content */
+  text-align: justify; /* Justify text */
+}
+
+.refinance-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.refinance-button {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+.refinance-button:hover {
+  background-color: #0056b3;
+}
+
+.refinance-image {
+  width: 100%;
+  height: 580px;
+  object-fit: cover;
+  object-position: center;
+  margin-bottom: 20px;
+  position: relative; /* Add position relative to the parent container */
+}
+
+.overlay-text-refinance {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 36px;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  text-align: center;
+}
+
+.overlayrefinance {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 580px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  z-index: 1; /* Ensure the overlay is above the image */
+}
+
+/* Media Queries for Mobile View */
+@media (max-width: 768px) {
+  .refinance-container {
       padding: 10px;
       text-align: center;
-    }
-  
-    .refinance-container h1 {
+  }
+
+  .refinance-container h1 {
       font-size: 1.5em;
-    }
-  
-    .refinance-container p,
-    .refinance-container h2,
-    .refinance-container ul {
+      text-align: justify; /* Justify text */
+  }
+
+  .refinance-container p,
+  .refinance-container h2,
+  .refinance-container ul {
       margin-left: auto;
       margin-right: auto;
       font-size: 1em;
-      text-align: center; /* Center text on mobile */
-    }
-  
-    .refinance-container ul {
+      text-align: justify; /* Justify text */
+  }
+
+  .refinance-container ul {
       padding-left: 0;
       list-style-position: inside; /* Adjust list style for centering */
-    }
-  
-    .refinance-buttons {
+  }
+
+  .refinance-buttons {
       flex-direction: column;
       align-items: center;
-    }
-  
-    .refinance-button {
+  }
+
+  .refinance-button {
       font-size: 1em;
       padding: 8px 16px;
-    }
-  
-    .content {
+  }
+
+  .content {
       flex-direction: column;
       align-items: center;
-    }
-  
-    .content img {
+  }
+
+  .content img {
       width: 100%;
       margin: 0 0 20px 0;
-    }
-  
-    .text {
+  }
+
+  .text {
       margin-left: auto;
       margin-right: auto;
-    }
-  
-    .refinance-image {
-      height: auto;
-    }
-  
-    .overlayrefinance {
-      height: auto;
-    }
-  
-    .overlay-text-refinance {
-      font-size: 24px;
-    }
   }
-  
+
+  .refinance-image {
+      height: auto;
+  }
+
+  .overlayrefinance {
+      height: auto;
+  }
+
+  .overlay-text-refinance {
+      font-size: 24px;
+  }
+}
+.textb
+{
+margin-left: 90px;
+}
+.refinance-container h2{
+  margin-left: 100px;
+}
