--- a/src/components/rates/FAR.css
+++ b/src/components/rates/FAR.css
@@ -106,3 +106,40 @@
     font-size: 1em;
   }
 }
+
+
+.factor-image-container{
+  width: 100%;
+  height: 67vh; /* Adjust the height as needed */
+  overflow: hidden;
+  margin-bottom: 20px;
+  position: relative; /* Add position relative to contain absolute overlay */
+}
+
+/* Style the image */
+.factor-image{
+  width: 100%;
+  height: 100vh; /* Set the height to half of the viewport height */
+  object-fit: cover; /* Ensure the image covers the container without distortion */
+  object-position: center top; /* Position the image to show the top half */
+  margin-bottom: 20px;
+}
+.overlay-text-factor{
+  position: absolute;
+  top: 70%; /* Adjust top position */
+  left: 35%; /* Adjust left position */
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 36px;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.overlayfactor{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height:100%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+}
