scroll fix and container adjustment

--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -40,27 +40,28 @@
 
 .hero .container {
   padding-top: 15%;
-  max-width: 1200px; /* Adjust maximum width as per your design */
+  max-width: 1600px; /* Adjust maximum width as per your design */
   margin: 0 auto; /* Center align the container */
 }
 
 .moving-yellow-container {
   background-color: rgb(0, 88, 146);
-  padding: 20px;
+  padding-bottom: 80px;
+  padding-top: 80px;
   border-top-left-radius: 100%;
   border-top-right-radius: 100%;
   overflow: hidden; /* Hide the bottom part of the container */
-  margin-bottom: 20px; /* Optional: adjust margin as needed */
+  margin-bottom: 100px; /* Optional: adjust margin as needed */
   transform: translateY(100%); /* Initial position shifted down */
-  margin-top: 250px; /* Adjust margin-top as needed */
+  margin-top: 200px; /* Adjust margin-top as needed */
   transition: transform 0.9s ease, opacity 0.9s ease; /* Add transition for smooth movement */
-  width: auto; /* Adjust width to fit content or use width: 100vw; for full viewport width */
+  width: 100%; /* Adjust width to fit content or use width: 100vw; for full viewport width */
   height: 100%; /* Example height adjustment */
 }
 
 
 .moving-yellow-container.show {
-  transform: translateY(0); /* Move up to original position */
+  transform: translateY(50%); /* Move up to original position */
   opacity: 1; /* Show element */
 }
 
